--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -3,7 +3,7 @@ name: Waka Readme
 on:
   workflow_dispatch: # for manual workflow trigger
   schedule:
-    - cron: "30 15 * * *" # runs at every 12AM UTC
+    - cron: "30 15 * * *" # runs at every 23:30 UTC+8
 
 jobs:
   update-readme:
