--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -3,7 +3,7 @@ name: Waka Readme
 on:
   workflow_dispatch: # for manual workflow trigger
   schedule:
-    - cron: "35 23 * * *" # runs at every 23:30
+    - cron: "45 15 * * *"
 
 jobs:
   update-readme:
