--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -16,7 +16,7 @@ jobs:
           # following flags are required, only if this is not on
           # profile readme, remove the leading `#` to use them
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          #REPOSITORY: <gh_username/gh_username>
+          REPOSITORY: <yrf105/yrf105>
           SHOW_TITLE: true
           BLOCKS: ░▒▓█
           TIME_RANGE: all_time
