--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -17,9 +17,9 @@ jobs:
           # following flags are required, only if this is not on
           # profile readme, remove the leading `#` to use them
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          REPOSITORY: <yrf105/yrf105>
-          SHOW_TITLE: true
-          BLOCKS: ░▒▓█
-          TIME_RANGE: all_time
-          SHOW_TIME: true
-          SHOW_MASKED_TIME: true
+#           REPOSITORY: <yrf105/yrf105>
+#           SHOW_TITLE: true
+#           BLOCKS: ░▒▓█
+#           TIME_RANGE: all_time
+#           SHOW_TIME: true
+#           SHOW_MASKED_TIME: true
