--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -17,6 +17,7 @@ jobs:
           #REPOSITORY: <gh_username/gh_username>
           SHOW_TITLE: true
           BLOCKS: ░▒▓█
-          TIME_RANGE: all_time
+          TIME_RANGE: last_7_days
           SHOW_TIME: true
           SHOW_MASKED_TIME: true
+          SHOW_TOTAL: true
