--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -2,8 +2,8 @@ name: Waka Readme
 
 on:
   workflow_dispatch: # for manual workflow trigger
-  schedule:
-    - cron: "45 15 * * *"
+#   schedule:
+#     - cron: "45 15 * * *"
 
 jobs:
   update-readme:
